Fix overlap issue with sub-title and nav - take two

--- a/styles.css
+++ b/styles.css
@@ -138,13 +138,14 @@ html {
 /* Media Query for screens 480px or smaller */
 @media (max-width: 480px) {
     .navbar {
-        padding: 10px;
+        padding: 10px 10px 0px 10px;
         justify-content: space-between;
     }
 
     .navbar ul {
         flex-direction: column;
         width: 100%;
+        top: 60px;
     }
 
     .navbar li {
@@ -152,7 +153,7 @@ html {
     }
 
     .sub-title {
-        margin-top: 10px;
+        margin-top: 20px;
     }
 }
 
